# odio-transcriber

./: .gitignore  README.md  dev.requirements.txt  main.py  pyproject.toml  requirements.txt
core/agent/: agent.py  model.py  tools.py
core/model/: base.py  whisper.py
core/transcribe/: __init__.py  base.py  main.py  whisper.py
core/tts/: whisperspeech.py
notebook/: bark.ipynb  whisper.ipynb
transcribe_service/: main.py  whisper.py
